# django-structure

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
core/core/utils/: collections.py  misc.py  settings.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py
core/project/settings/templates/: settings.dev.py
project/: settings.py
scripts/: entrypoint.sh  production_data.py
