[tool.poetry]
name = "django-structure"
version = "0.1.0"
description = ""
authors = ["palas1k <liserg008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"
django-filter = "^23.4"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"
pyproject-toml = "^0.0.10"
pytest = "^7.4.3"
pytest-xdist = "^3.5.0"
pytest-django = "^4.7.0"
model-bakery = "^1.17.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
flake8 = "4.0.0"
importlib-metadata = "4.8.3"
colorlog = "^6.8.0"
pytest = "^7.4.3"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.pytest.ini_options]
#DJANGO_SETTINGS_MODULE = "core.project.settings.base"
django_find_project = false
python_files = "test_*.py"
testpaths = ['core']
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"

[tool.yapf]
based_on_style = 'google'
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
